...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="ID"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter id"/>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="accessesaryView">
                                                        <integer key="value" value="2"/>
...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Full Name"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter full name"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Band"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter band"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Designation"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Enter designation"/>
                                                </userDefinedRuntimeAttributes>
                                            </view>
...
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Current Project"/>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Select current project"/>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="accessesaryView">
                                                        <integer key="value" value="1"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a new project...." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CmH-zL-b8d">
                                <rect key="frame" x="8" y="98" width="338" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="ProjectTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="vui-rZ-OBZ"/>
...
